# rust-rest-api

./: .gitignore  Cargo.toml  README.md
db/: docker-compose.yaml
migrations/: 20230812203458_create_subscriptions_table.sql
scripts/: init_db.bat  init_db.sh
src/: configuration.rs  lib.rs  login.rs  main.rs
src/api/: api.rs
src/routes/: login.rs  mod.rs
tests/: health_check.rs
